第一阶段完成

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,8 +4,8 @@ server:
 # 数据库连接
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/translation?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-    username: root
+    url: jdbc:mysql://kingsword.top:3306/translation?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    username: translation
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
@@ -19,8 +19,6 @@ spring:
       auto-commit: true
       #最大空闲时常
       idle-timeout: 30000
-      #连接池名
-      pool-name: MyHikariCP
       #最大生命周期
       max-lifetime: 1800000
       #连接超时时间
@@ -31,18 +29,20 @@ spring:
   # 设置上传文件的最大值
   servlet:
     multipart:
-      max-file-size: 500MB
-      max-request-size: 500MB
+      max-file-size: 1500MB
+      max-request-size: 1500MB
 
 logging:
   level:
-    com.translation.dao : debug
+    com.translation.dao: debug
 
 hdfs:
-  filePath: /sss
-  path: hdfs://192.168.201.131:9000
+  filePath: /program
+  filePathNoProgram: /noProgram
+  path: hdfs://10.32.6.221:9000
   username: hadoop
 
-TRANSLATION_URL: http://raasr.xfyun.cn/api
-APP_ID: 5d3fe04e
-SECRET_KEY: b53092030c92e3b509c361f6217e398f
+xunfei:
+  url: http://raasr.xfyun.cn/api
+  appId: 5d7601d6
+  secretKey: 6f58f6ca2cae58dd237765e07ae63042
